# haystack-mapping-exploration

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml  test_examples.py
data/: defs.json  defs.zinc  sample_bas_mappings.csv
results/: sample_mapping_results.csv
src/: __init__.py  cli_mapper.py  mapping_utils.py
